--- a/static/index.html
+++ b/static/index.html
@@ -5,47 +5,39 @@
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" 
         integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <style>
-    #coin-filters-content {
-      height: 500px;
-      overflow-y: scroll;
-    }
-  </style>
 </head>
 <body>
   <div id="app" class="container-fluid">
     <div class="row d-flex d-md-block flex-nowrap wrapper">
       <div class="col-md-3 float-left col-1 pl-0 pr-0 collapse width show" id="sidebar">
         <div class="list-group border-0 card text-center text-md-left">
+          <a class="list-group-item d-inline-block">
+            <i class="fa fa-dashboard"></i> <span class="d-none d-md-inline">Exchange Filters</span>
+          </a>
+
+          <div class="form-check list-group-item" v-for="exchange in availableExchanges">
+            <label class="form-check-label">
+              <input class="form-check-input" type="checkbox" v-model="exchangeFilters[exchange]" v-on:change="saveExchangeFilters">
+              {{exchange}}
+            </label>
+          </div>
 
           <a class="list-group-item d-inline-block" data-toggle="collapse" href="#coin-filters" aria-expanded="true" aria-controls="coin-filter">
             <i class="fa fa-dashboard"></i> <span class="d-none d-md-inline">Currency Filters</span>
           </a>
 
           <div id="coin-filters">
-            <div id="coin-filters-content">
-              <div class="form-check list-group-item" v-for="coin in availableCoins" data-parent="#menu1">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" v-model="coinFilters[coin]" v-on:change="saveCoinFilters">
-                    {{coin}}
-                </label>
-              </div>
+            <div class="form-check list-group-item" v-for="coin in availableCoins" data-parent="#menu1">
+              <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" v-model="coinFilters[coin]" v-on:change="saveCoinFilters">
+                  {{coin}}
+              </label>
             </div>
           </div>
         </div>
       </div>
     </div>
     <main class="col-md-9 float-left col px-5 pl-md-2 pt-2 main">
-      <div>
-        <h2>Filter Exchanges</h2>
-        <div class="form-check form-check-inline" v-for="exchange in availableExchanges">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" v-model="exchangeFilters[exchange]" v-on:change="saveExchangeFilters">
-            {{exchange}}
-          </label>
-        </div>
-      </div>
-
       <div>
         <table class="table">
           <thead>
